# tacticore

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: DESIGN.md
scripts/: build_name_pools.py  match_stats.py  show_squad.py  watch_match.py
soccer_manager/: __init__.py  __main__.py  config.py
soccer_manager/core/: __init__.py  calendar.py  rng.py
soccer_manager/domain/: club.py  player.py
soccer_manager/generators/: __init__.py  player_generator.py
soccer_manager/persistence/: savegame.py
soccer_manager/simulation/: __init__.py
soccer_manager/ui/: app.py
tacticore/: __init__.py  __main__.py  config.py
tacticore/core/: game.py
tacticore/domain/: __init__.py  club.py  coach.py  country.py  (+18 more)
tests/: test_art.py  test_attr_peek.py  test_compare_players.py  test_country_select.py  test_discipline.py  test_economy.py  test_employees_ui.py  test_events.py  test_facilities_staff.py  test_field.py  test_finance_health.py  test_form.py  test_formation_familiarity.py  test_game.py  test_generators.py  test_lineup.py  test_match_ai.py  test_match_attack.py  test_match_engine.py  test_match_events.py  test_match_field.py  test_match_flow.py  test_match_goalkeeper.py  test_match_goals.py  test_match_marking.py  test_match_oddities.py  test_match_passing.py  test_match_possession.py  test_match_rebounds.py  test_match_referee.py  test_match_replay.py  test_match_restarts.py  test_match_roles.py  test_match_runs.py  test_match_state.py  test_match_tackle.py  test_names.py  test_notifications_detail.py  test_oficina_calendar.py  test_persistence.py  (+13 more)
(+143 files in other folders)
